# survey_framework

./: .flake8  .gitignore  README.md  pyproject.toml
src/api/: LaTexAccents.py  config.py  main.py  utils.py
src/api/front/: .eslintrc.cjs  package.json
src/api/front/src/: App.css  App.jsx  index.css
src/api/front/src/api/: Constants.js  utils.js
src/api/front/src/components/: Filters.jsx  ImageCard.jsx  PaperModal.jsx  StyledIconButton.jsx
src/database/: mongo.py  utils.py
src/extract/: LaTexAccents.py  data.py  main.py  metadata.py  tree.py  types.py  utils.py
src/front/: index.html  package.json
src/front/src/: App.css  App.jsx
src/front/src/api/: Constants.js
src/front/src/components/: ImageCard.jsx  PaperModal.jsx
tests/: test_data.py  test_mongo.py  test_tree.py  test_utils.py
tests/sample_data/: metadata.toml  papers.bib
